maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:51: error: ';' expected but 'def' found.
Boolean def check(x:Int,y:Int,sol:Int){
        ^